fix The title of the custom research is displayed incorrectly #191